test: refactor and fix all unit tests across the application